--- a/FINAL ASSIGNMENT PORTFOLIO CNC-036723.html
+++ b/FINAL ASSIGNMENT PORTFOLIO CNC-036723.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html  >
     <head>
-		<title> Final Assignment Portfolio CNC </title>
+		<title> Assignment Portfolio CNC </title>
 			<meta charset="UTF-8">
 			<meta name="description" content="Portfolio">
 			<meta name="keywords" content="HTML,CSS">
