Updated with Packages Complete Panacloud Portfolio Assignment

--- a/FINAL ASSIGNMENT PORTFOLIO CNC-036723.html
+++ b/FINAL ASSIGNMENT PORTFOLIO CNC-036723.html
@@ -64,10 +64,29 @@
 			border-sizing: border-box;    height: 650px; padding:5px; background-color: #F0F0F0;
 			}
 			.skills{
-			border-sizing: border-box;  height:200px;
+						 height:200px;
 			}
+			.afford{
+				border: solid black; border-width:2px; height:930px; background-color: #F0F0F0;
+			}
+			.pack1{
+				color:#A0A0A0;
+			}
+			.a11{
+				background-color:white;
+			}
+			.a22{ background-color:white;
+
+			}
+			.a11:hover{
+				width:450px; background-color:#fdd7ce;
+			}
+			.a22:hover{
+				width:370px; background-color:#fcc2b6;
+			}
+			
 			.skillimg{
-			display: inline-block; padding: 15px 5px; margin: 2px 30px;
+				  display: inline-block; padding: 15px 5px; margin: 2px 30px;
 			}
 			.start{
 			height: 400px;  background-color:  #8EC639 ;
@@ -110,51 +129,69 @@
 			.vla {
 			border-left: 4px solid #8EC639;
 			height: 280px;
-			position: absolute; top: 6150px;
+			position: absolute; top: 7080px;
 			left: 50%;
 			margin-left: -3px;
 			}
+			.ah:link    {color:black;}
+ 			.ah:visited {color:black;}
+ 			.ah:hover   {color:black;}
+ 			.ah:active  {color:black;}
+			.ah{text-decoration: none;}
+			.ah:hover{ border-bottom: 3px solid #FEBD19; color:#FEBD19;}
+			.ah:active{ border-bottom: 3px solid #FEBD19; color:#FEBD19;}
+			.butt{font-family: sans-serif;  position: absolute; left: 43%; top: 73%; border-radius: 5px;  width: 140px; height:40px; background-color:#FEBD19;  border-style: solid; border-color: #FEBD19 #FEBD19 #FF4500 #FEBD19;}
+			.butt:hover{border-style: solid; border-color:  #FF4500; width: 144px; height:43px;}
+			.butt2{font-family: sans-serif;  position: absolute; left:50px; border-radius: 5px;  width: 140px; height:40px; background-color:#FEBD19;  border-style: solid; border-color: #FEBD19 #FEBD19 #FF4500 #FEBD19;}
+			.butt2:hover{border-style: solid; border-color:  #FF4500; width: 144px; height:43px;}
+			.butt3{font-weight: bold;   border-radius: 8px; padding: 11px 25px; border-style: solid; border-color: #FEBD19 #FEBD19 #FF4500 #FEBD19; background-color:	#FEBD19;}
+			.butt3:hover{border-style: solid; border-color:  #FF4500; width: 165px; height:45px;}
+			.butt4{ border-style: solid; border-color: white; background-color: #8ACE08; color:white; position: relative; bottom: 1080px; left: 560px; height:35px; width:220px;}
+			.butt4:hover{border-style: solid; border-color: #FEBD19; }
+			.butt5{border-style: solid; border-color: white; color: white; border-radius:5px;  background-color: #8EC639;  padding:5px 20px;}
+			.butt5:hover{border-style: solid; border-color: #FEBD19;}
+		
 		</style>
 
 		</head>
-				<body>
+				<body >
 					<div class="head1">
 					<div class="up" align="left">
-						<a class="head1a" style=" background-color: #3b5998;  padding: 5px 12px; font-family: georgia;"  ><b>f</b></a> 
-						<a style=" padding: 5px 6px; background-color: #55ACEE; font-family: georgia;" class="head1a"><b>tw</b></a> 
-						<a style=" padding: 5px 6px; background-color:  #D44638; font-family: georgia; " class="head1a"><b>g<sup>+</sup></b></a> 
-						<a style=" padding: 6px 8px; background-color: #0e76a8; font-family: georgia;" class="head1a"><b>in</b></a> 
-						<a style=" font-size:13px; padding: 8px 2px; background-color:  #c4302b; font-family: georgia;" class="head1a"><b>tube</b></a>
+						<a href="https://web.facebook.com/panacloud/?_rdc=1&_rdr" class="head1a" style=" background-color: #3b5998;  padding: 5px 12px; font-family: georgia;"  ><b>f</b></a> 
+						<a href="https://twitter.com/ziakhan" style=" padding: 5px 6px; background-color: #55ACEE; font-family: georgia;" class="head1a"><b>tw</b></a> 
+						<a href="https://www.piaic.org/" style=" padding: 5px 6px; background-color:  #D44638; font-family: georgia; " class="head1a"><b>g<sup>+</sup></b></a> 
+						<a href="https://pk.linkedin.com/in/ziaukhan" style=" padding: 6px 8px; background-color: #0e76a8; font-family: georgia;" class="head1a"><b>in</b></a> 
+						<a href="https://www.youtube.com/channel/UC2Makv_pLAtvrjHNgg-pBLg" style=" font-size:13px; padding: 8px 2px; background-color:  #c4302b; font-family: georgia;" class="head1a"><b>tube</b></a>
 					</div>
-					<div style="position: absolute; top: 25px; right: 40px;" align="right">
-							<span class="inupr" style=" color: white; ">&#9990; +92(304)386-6719 &emsp; &#9990; +92(317)011-3001 &emsp;</span>
-							<span class="inupr" style=" color: white; border-radius:5px; border-box: border-spacing; background-color: #8EC639;  padding:5px 20px;"   > CALL ME BACK </span> 
+					<div style="position: absolute; top: 20px; right: 40px;" align="right">
+							<span  style=" color: white; ">&#9990; +92(304)386-6719 &emsp; &#9990; +92(317)011-3001 &emsp;</span>
+							<button class="butt5"  > CALL ME BACK </button> 
 					</div>
 
 					</div>
 
 					<div class="head2">
 								<img  src="pana11.png" style=" width: 100px; height: 50px; " > 
-							<span style=" position: absolute; top: 70px; right:790px; padding: 8px;"> WHY US </span> 
-							<span style=" position: absolute; top: 70px; right:700px; padding: 8px;"> ABOUT </span> 
-							<span style=" position: absolute; top: 70px; right:590px; padding: 8px;"> SERVICES </span> 
-							<span style="font-weight: bold; color: #FEBD19; padding: 8px; text-decoration: underline; position: absolute; top: 70px; right:470px;"> PORTFOLIO </span>
-							<span style=" position: absolute; top: 70px; right:370px;padding: 8px;  "> PROCESS </span>
-							<span style=" position: absolute; top: 70px; right:270px; padding: 8px;"> REVIEWS</span>
-							<span style=" position: absolute; top: 70px; right:150px; padding: 8px;" > OUR SKILLS</span>
-							<span style=" position: absolute; top: 70px; right:30px; padding: 8px;" >CONTACT US </span>
+							<a href="#why" class="ah" style=" position: absolute; top: 70px; right:790px; padding: 8px;"> WHY US </a href="#about"> 
+							<a href="#about" class="ah" style=" position: absolute; top: 70px; right:700px; padding: 8px;"> ABOUT </a> 
+							<a href="#services" class="ah" style=" position: absolute; top: 70px; right:590px; padding: 8px;"> SERVICES </a href="#about" > 
+							<a href="#portfolio" class="ah" style="font-weight: bold; color:#FEBD19; text-decoration: underline; padding: 8px; position: absolute; top: 70px; right:470px;"> PORTFOLIO </span>
+							<a href="#process" class="ah" style=" position: absolute; top: 70px; right:370px;padding: 8px;  "> PROCESS </a href="#about">
+							<a href="#reviews" class="ah" style=" position: absolute; top: 70px; right:270px; padding: 8px;"> REVIEWS</a href="#about">
+							<a href="#skills" class="ah" style=" position: absolute; top: 70px; right:150px; padding: 8px;" > OUR SKILLS</a href="#about">
+							<a href="#contact" class="ah" style=" position: absolute; top: 70px; right:30px; padding: 8px;" >CONTACT US </a href="#about">
 					</div>
 					<div class="head3">
 									<h1 style=" position: absolute; top: 30%; left: 30%; font-size:50px; font-family: georgia; color: white;"> WE ARE EXPERTS </h1>
 											<br><br><br><br><br><br><br><br><br><br><br><br>
 										<pre style="color: white; font-family: georgia; font-size:20px; text-align: center; ">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print,
 graphic or web designs.The passage is attributed to an unknown typesetter in the 15th century. </pre>
-							<span style="position: absolute; left: 43%; top: 73%; border-radius: 4px; border-sizing: border-box; padding: 8px 25px; background-color:#FEBD19; border-bottom-style: solid; border-bottom-color: #FF4500;"  ><b>READ MORE</b></span>										  
+							<button class="butt" ><b>READ MORE</b></button>										  
 
 					</div>
 
 					<div class="ouradvantages">
-									<h1 align=" center" style="color: #678E19;"><span style="color: black;">OUR </span>  ADVANTAGES</h1>
+									<h1 id="why" align=" center" style="color: #678E19;"><span style="color: black;">OUR </span>  ADVANTAGES</h1>
 
 										<pre align="center" style="color: #A9A9A9; font-size:15px; font-family: georgia;">  
                  Lorem ipsum, or lipsum as it is sometimes known, is dummy text used  in laying out print, graphic or web designs.
@@ -216,7 +253,7 @@ graphic or web designs.The passage is attributed to an unknown typesetter in the
 
 				<div class="aboutusbox"   >
 												<br>
-						<h1 align="center" style="font-family: georgia;" > ABOUT <span style="color: #678E19;">US<span> </h1>
+						<h1 id="about" align="center" style="font-family: georgia;" > ABOUT <span style="color: #678E19;">US<span> </h1>
 
 					<pre style="font-size:15px; color: black; font-weight: 20px;  font-family: georgia;">         Lorem ipsum, or lipsum as it is sometimes known, is dummy false
          graphic or web designs. The passage is attributed to an unknown 
@@ -233,11 +270,11 @@ graphic or web designs.The passage is attributed to an unknown typesetter in the
          websites, and stock designs. Use our generator to get websites
          or read on for the. 
 										</pre><br><br>
-							<span style="position: absolute; left:50px;  border-radius: 4px; border-sizing: border-box; padding: 8px 25px; background-color:#FEBD19; border-bottom-style: solid; border-bottom-color: #FF4500;"  ><b>READ MORE</b></span>
+										<button class="butt2" ><b>READ MORE</b></button>	
 				</div>
 
 				<div class="services">
-									<h1 align="center" style="font-family: georgia;"> OUR <span style="color: #678E19;">SERVICES</span></h1>
+									<h1 id="services" align="center" style="font-family: georgia;"> OUR <span style="color: #678E19;">SERVICES</span></h1>
 
 										<pre align="center" style="color: #A9A9A9; font-size:15px; font-family: georgia;">  
                  Lorem ipsum, or lipsum as it is sometimes known, is dummy text used  in laying out print, graphic or web designs.
@@ -325,7 +362,7 @@ graphic or web designs.The passage is attributed to an unknown typesetter in the
 
 <div style="height:520px;">
 
-<h1 style="font-family: Trebuchet MS, sans-serif;" align="center" style="font-family: georgia;"> OUR <span style="color: #678E19;">PROCESS</span></h1>
+<h1 id="process" style="font-family: Trebuchet MS, sans-serif;" align="center" style="font-family: georgia;"> OUR <span style="color: #678E19;">PROCESS</span></h1>
 <pre align="center" style="color: #A9A9A9; font-size:15px; font-family: georgia;">  
                  Lorem ipsum, or lipsum as it is sometimes known, is dummy text used  in laying out print, graphic or web designs.
 				 The passage is attributed to an unknown typesetter in the 15th century.
@@ -388,7 +425,7 @@ is sometimes known, is
 
 <div class="people">
 <br>
-<h1 style="  font-family: Trebuchet MS, sans-serif;" align=" center"> PEOPLE <span style="color: #678E19;"> ABOUT US<span></h1>
+<h1 id="reviews" style="  font-family: Trebuchet MS, sans-serif;" align=" center"> PEOPLE <span style="color: #678E19;"> ABOUT US<span></h1>
 
 <pre align="center" style="color: #A0A0A0; font-size:15px;  font-family: georgia;">  
                  Lorem ipsum, or lipsum as it is sometimes known, is dummy text used  in laying out print, graphic or web designs.
@@ -425,7 +462,7 @@ is sometimes known, is
 </div>
 
 <div class="skills">
-<h1 align="center" style="font-family: Trebuchet MS, sans-serif;" >OUR <span style=" color:#678E19; "> SKILLS</span></h1>
+<h1 id="skills" align="center" style="font-family: Trebuchet MS, sans-serif;" >OUR <span style=" color:#678E19; "> SKILLS</span></h1>
 <pre align="center" style="color: #A0A0A0; font-size:15px;  font-family: georgia;">  
                  Lorem ipsum, or lipsum as it is sometimes known, is dummy text used  in laying out print, graphic or web designs.
 				 The passage is attributed to an unknown typesetter in the 15th century.
@@ -448,6 +485,69 @@ is sometimes known, is
  <h4 align="center" style="font-size:20px; font-family: Trebuchet MS, sans-serif;">WEBSITES</h4>
  </div>
 </div>
+
+<div class="afford">
+	<h1 align="center">Affordable Web Design Packages</h1>
+<p align=" center" class="pack1" style="font-size:20px;">Experience the industry's best web design deals at 60% Discount with 100% Money Back Guarantee</p>
+
+<hr style="width:50px; height: 3px; background-color: #8ACE08;">
+<br>
+	<div align= "center" class="a11" style="position: relative; left:80px; top:50px; border: solid black; width:420px; border-width: 2px;">
+		<h2>WEB BASIC PREMIUM</h2>
+		<hr style="width:350px;">
+		<span style="font-size: 50px; color: #8ACE08;">$859.00</span>
+		<h4><s>$2140</s> 60% off!</h4>
+		<p class="pack1">Unlimited Pages Website</p>
+		<p class="pack1">1 Design Concept</p class="pack1">
+		<p class="pack1">1 Dedicated designer</p class="pack1">
+		<p class="pack1">Turn Around 5 Business Days</p class="pack1">
+		<p class="pack1">10 Stock Photos</p class="pack1">
+		<p class="pack1">Free On-Page SEO</p class="pack1">
+		<p class="pack1">Free 1 Year Web Hosting</p class="pack1">
+		<p><b>FREE CMS Integration</b></p>
+		<p class="pack1"><b style="color:black">100%</b>Satisfaction Guaranteed</p>
+		<button style=" position: relative; top:72px; color : white;height:40px; width: 140px; background-color: #0685F6;">ORDER NOW</button>
+		<br><br><br><br>
+</div>
+<div align= "center" class="a22" style=" position: relative; left:490px; bottom:560px; z-index:12; border: solid black; width:350px; border-width: 2px;">
+	<h2>WEB BASIC PLUS</h2>
+	<p class="pack1">Web Basic Plus</p>
+	<hr style="width:280px;">
+	<span style="font-size: 50px; color: #8ACE08;">$649.00</span>
+	<h4><s>$1629</s> 60% off!</h4>
+	<p class="pack1">7 Pages Website</p class="pack1">
+	<p class="pack1">1 Design Concept</p class="pack1">
+	<p class="pack1">1 Dedicated designer</p class="pack1">
+	<p class="pack1">Turn Around 5 Business Days</p class="pack1">
+	<p class="pack1">7 Stock Photos</p class="pack1">
+	<p class="pack1">Free On-Page SEO</p class="pack1">
+	<p class="pack1">W3C Certified HTML</p class="pack1">
+	<p><b>Add CMS for $299</b></p>
+	<p class="pack1"><b style="color:black">100%</b>Satisfaction Guranteed</p class="pack1">
+	<button style=" position: relative; top:35px; color : white;height:40px; width: 140px; background-color: #0685F6;">ORDER NOW</button>
+	<br><br>
+</div>
+<div align= "center"  class="a11" style=" position: relative; left:830px; bottom:1145px; border: solid black; width:420px; border-width: 2px;">
+	<h2>WEB BASIC </h2>
+	<hr style="width:350px;">
+	<span style="font-size: 50px; color: #8ACE08;">$499.00</span>
+	<h4><s>$1240</s> 60% off!</h4>
+	<p class="pack1">6 Pages Website</p class="pack1">
+	<p class="pack1">1 Design Concept</p class="pack1">
+	<p class="pack1">1 Dedicated designer</p class="pack1">
+	<p class="pack1">Turn Around 5 Business Days</p class="pack1">
+	<p class="pack1">4 Stock Photos</p class="pack1">
+	<p class="pack1">Free On-Page SEO</p class="pack1">
+	<p class="pack1">W3C Certified HTML</p class="pack1">
+	<p><b>Add CMS for $299</b></p>
+	<p class="pack1"><b style="color:black">100%</b>Satisfaction Guaranteed</p class="pack1">
+	<button style=" position: relative; top:72px; color : white;height:40px; width: 140px; background-color: #0685F6;">ORDER NOW</button>
+	<br><br><br><br>
+</div>
+
+<button class="butt4" >View All Packages</button>
+
+</div>
 <div class="start">
 <br>
 <h1 align="center" style=" font-size: 55px; font-family: Trebuchet MS, sans-serif; color: white;" >START YOUR NEW PROJECT</h1>
@@ -456,7 +556,7 @@ is sometimes known, is
 <input type="text" name="name" placeholder="YOUR NAME" class="startinput">
 <input type="text" name="email" placeholder="YOUR EMAIL" class="startinput" >
 <input type="text" name="phone" placeholder="YOUR PHONE" class="startinput" >
-<input type="submit" name="Send REQUEST" value="SEND REQUEST"  style="font-weight: bold;   border-radius: 8px; padding: 11px 25px; border-bottom-style: solid; border-bottom-color: #FF4500; background-color:	#FEBD19;">
+<input type="submit" name="Send REQUEST" value="SEND REQUEST"  class="butt3">
 </div>
 <pre align="center" style="color: white; font-size:15px;  font-family: georgia;">  
                      Lorem ipsum, or lipsum as it is sometimes known, is dummy text used  in laying out print, graphic or web designs.
@@ -465,7 +565,7 @@ is sometimes known, is
 </div>
 
 <div class="ourcontact">
-<h1 align="center" style=" font-size: 40px;font-family: Trebuchet MS, sans-serif; ">OUR <span style="color: #678E19;  ">CONTACTS</span></h1>
+<h1 id="contact" align="center" style=" font-size: 40px;font-family: Trebuchet MS, sans-serif; ">OUR <span style="color: #678E19;  ">CONTACTS</span></h1>
 <pre align="center" style="color: #A9A9A9; font-size:15px;  font-family: georgia;">  
                  Lorem ipsum, or lipsum as it is sometimes known, is dummy text used  in laying .
 		 The passage  to an unknown typesetter in the 15th century.
@@ -526,11 +626,11 @@ is sometimes known, is
 <br>
 <h3 style="font-size:25px; font-family: Trebuchet MS, sans-serif;" >FOLLOW US</h3>
 <div>
-<a  style=" background-color: #3b5998;  padding: 5px 12px; font-family: georgia;" class="contacts"  ><b>f</b></a> 
-<a style=" padding: 5px 6px; background-color: #55ACEE; font-family: georgia;" class="contacts"><b>tw</b></a> 
-<a style=" padding: 5px 6px; background-color:  #D44638; font-family: georgia; " class="contacts"><b>g+</b></a> 
-<a style=" padding: 6px 8px; background-color: #0e76a8; font-family: georgia;" class="contacts"><b>in</b></a> 
-<a style=" font-size:13px; padding: 8px 2px; background-color:  #c4302b; font-family: georgia;" class="contacts"><b>tube</b></a>
+<a href="https://web.facebook.com/panacloud/?_rdc=1&_rdr" style=" background-color: #3b5998;  padding: 5px 12px; font-family: georgia;" class="contacts"  ><b>f</b></a> 
+<a href="https://twitter.com/ziakhan"  style=" padding: 5px 6px; background-color: #55ACEE; font-family: georgia;" class="contacts"><b>tw</b></a> 
+<a href="https://www.piaic.org/" style=" padding: 5px 6px; background-color:  #D44638; font-family: georgia; " class="contacts"><b>g+</b></a> 
+<a href="https://pk.linkedin.com/in/ziaukhan" style=" padding: 6px 8px; background-color: #0e76a8; font-family: georgia;" class="contacts"><b>in</b></a> 
+<a href="https://www.youtube.com/channel/UC2Makv_pLAtvrjHNgg-pBLg" style=" font-size:13px; padding: 8px 2px; background-color:  #c4302b; font-family: georgia;" class="contacts"><b>tube</b></a>
 </div>
 </div>
 </body>
